@@ -1,0 +1,4 @@
+# Dual processor
+MAKEJOBFLAGS = -j 2
+# cross-tools installed in HOME
+OTHERTARGETS = i586-mingw32msvc
